SSEE-1304 - add styling to fix focussed sign-out contrast

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,7 @@
 $govuk-assets-path: "/iced-subscription-frontend/assets/lib/govuk-frontend/govuk/assets/";
 $hmrc-assets-path: "/iced-subscription-frontend/assets/lib/hmrc-frontend/hmrc/";
 
+.hmrc-header.hmrc-header--with-additional-navigation .hmrc-sign-out-nav__link:focus{ color: #0B0C0C; }
+
 @import "lib/govuk-frontend/govuk/all";
 @import "lib/hmrc-frontend/hmrc/all";
